Update the webpage with css and images

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,48 +3,57 @@
 <head>
 	<meta charset="utf-8">
 	<title>Range Rover Portfolio - Our Latest Projects</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 	<header>
 		<nav>
-			<ul>
-				<li><a href="Homepage.html">Home</a></li>
-				<li><a href="Vehicles.html">Vehicles</a></li>
-				<li><a href="services.html">Services</a></li>
-				<li class="active"><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
-			</ul>
+			<a href="./index.html">Home</a>
+			<a href="./vehicles.html">Vehicles</a>
+			<a href="./services.html">Services</a>			
+			<a href="./portfolio.html">Portfolio</a>
+			<a href="./contact.html">Contact</a>
 		</nav>
 	</header>
 <main>
 	<h1>Our Latest Projects</h1>
-	<div class="project">
-		<img src="project1.jpg" alt="Project 1">
-		<h2>Range Rover Evoque</h2>
-		<p>Under this YouTube campaign, Range rover tried to showcase their brand’s cars capability level. And the model named Evoque’s determines that the brand is actually very capable to rise above to the occasion. The brand was actually tested for its capability to deal with speed bumps with much ease. All in all, it can be said that range rover spots version and 4*4 cars of this Brand worth for the wheelsets they are equipped with. All these campaigns of ranger rover were actually very successful over YouTube with good amount of views. </p>
-		<a href="#">View Project</a>
+	<div class="project-container">
+		<div class="project">
+			
+			<h2>Range Rover Evoque</h2>
+			<p>Under this YouTube campaign, Range rover tried to showcase their brand’s cars capability level. And the model named Evoque’s determines that the brand is actually very capable to rise above to the occasion. The brand was actually tested for its capability to deal with speed bumps with much ease. All in all, it can be said that range rover spots version and 4*4 cars of this Brand worth for the wheelsets they are equipped with. All these campaigns of ranger rover were actually very successful over YouTube with good amount of views. </p>
+			<a href="c">View Project</a>
+		</div>
+		<div class="project-image">
+			<img src="./evoque.webp" alt="Project 1">
+		</div>
 	</div>
-	<div class="project">
-		<img src="project2.jpg" alt="Project 2">
-		<h2>Range Rover Sport</h2>
-		<p> Talking about the power of range rover sports SUV’s, the campaign conducted over YouTube by the brand determines that the car is very powerful, as it successfully pulled 3 train carriages at once weighing more than 100 ronnes along with the railway track, sopping onlookers in their tracks. The sports SUV range rover hauled all the weight like nothing at once and proved why range rover is best among all. The tiny Discovery Sport’s pulling strength was put to the ultimate test during a 10-kilometre excursion through northern Switzerland’s Rhine area. Also, the mini sports car of range rover can pull certified maximum weight of 2.5 tones, which is 60 times as compared to Jaguar. </p>
-		<a href="#">View Project</a>
+	<div class="project-container">
+		<div class="project">
+			<h2>Range Rover Sport</h2>
+			<p> Talking about the power of range rover sports SUV’s, the campaign conducted over YouTube by the brand determines that the car is very powerful, as it successfully pulled 3 train carriages at once weighing more than 100 ronnes along with the railway track, sopping onlookers in their tracks. The sports SUV range rover hauled all the weight like nothing at once and proved why range rover is best among all. The tiny Discovery Sport’s pulling strength was put to the ultimate test during a 10-kilometre excursion through northern Switzerland’s Rhine area. Also, the mini sports car of range rover can pull certified maximum weight of 2.5 tones, which is 60 times as compared to Jaguar. </p>
+			<a href="https://www.landrover.in/vehicles/new-range-rover-sport/index.html">View Project</a>
+		</div>
+		<div class="project-image">
+			<img src="./sport.webp" alt="Project 2">
+		</div>
 	</div>
-	<div class="project">
-		<img src="project3.jpg" alt="Project 3">
-		<h2>Range Rover Velar</h2>
-		<p> Forward-thinking with curated and refined elements; Range Rover Velar's design is both intriguing and desirable. As it is seen that Electric Cars are the future, Velar solves the charging speed concerns by having the ability to charge from 0 to 80 percent in 30 minutes‡ with rapid DC charging. </p>
-		<a href="#">View Project</a>
+	<div class="project-container">
+		<div class="project">
+			<h2>Range Rover Velar</h2>
+			<p> Forward-thinking with curated and refined elements; Range Rover Velar's design is both intriguing and desirable. As it is seen that Electric Cars are the future, Velar solves the charging speed concerns by having the ability to charge from 0 to 80 percent in 30 minutes‡ with rapid DC charging. </p>
+			<a href="https://www.landrover.in/vehicles/range-rover-velar/index.html">View Project</a>
+		</div>
+		<div class="project-image">
+			<img src="./velar.webp" alt="Project 3">
+		</div>
 	</div>
 </main>
 
 <footer>
-	<p>&copy; 2023 Range Rover</p>
+	<footer>
+		<p>&copy; 2023 Range Rover. All rights reserved.</p>
+	</footer>
 </footer>
 </body>
 </html>
-
-
-
-
