--- a/vehicles.html
+++ b/vehicles.html
@@ -2,23 +2,21 @@
 <html>
 <head>
 	<title>Vehicles</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
 	<header>
-		<h1>Vehicles</h1>
 		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="services.html">Services</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
+			<a href="./index.html">Home</a>
+			<a href="./vehicles.html">Vehicles</a>
+			<a href="./services.html">Services</a>			
+			<a href="./portfolio.html">Portfolio</a>
+			<a href="./contact.html">Contact</a>
 		</nav>
 	</header>
 
 	<main>
+		<h1>Vehicles</h1>
 		<section>
 			<article>
 				<h2>RANGE ROVER EVOQUE</h2>
@@ -38,7 +36,7 @@
 	</main>
 
 	<footer>
-		<p>&copy; 2023 Vehicles</p>
+		<p>&copy; 2023 Range Rover. All rights reserved.</p>
 	</footer>
 
 </body>
