--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./vehicles.html">Vehicles</a>
+        <a href="./services.html">Services</a>			
+        <a href="./portfolio.html">Portfolio</a>
+        <a href="./contact.html">Contact</a>
+      </nav>
+    </header>
     <div class="container">
       <form action="submit-form.php" method="POST">
         <h2>Contact Us</h2>
