--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 	<title>About Us - Range Rover</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<header>
@@ -44,6 +41,5 @@
 	<footer>
 		<p>&copy; 2023 Range Rover. All rights reserved.</p>
 	</footer>
-	<script src="./script.js"></script>
 </body>
 </html>
