--- a/services.html
+++ b/services.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 	<title>Services - Range Rover</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./styles.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
 	<header>
 		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="Vehicles.html">Vehicles</a></li>
-				<li class="active"><a href="services.html">Services</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
-			</ul>
+			<a href="./index.html">Home</a>
+			<a href="./vehicles.html">Vehicles</a>
+			<a href="./services.html">Services</a>			
+			<a href="./portfolio.html">Portfolio</a>
+			<a href="./contact.html">Contact</a>
 		</nav>
 	</header>
 	<main>
@@ -20,22 +20,22 @@
 			<h1>Our Services</h1>
 			<p>Range Rover offers a wide range of services to cater to the needs of our valued customers. From maintenance to customization, we are committed to providing the highest level of quality and expertise. Here are some of the services we offer:</p>
 			<div class="service">
-				<img src="service1.jpg">
+				<i class="fas fa-tools"></i>
 				<h2>Regular Maintenance</h2>
 				<p>We offer regular maintenance services to keep your Range Rover in top condition. Our experienced mechanics use the latest equipment and techniques to ensure that your vehicle is running smoothly.</p>
 			</div>
 			<div class="service">
-				<img src="service2.jpg">
+				<i class="fas fa-wrench"></i>
 				<h2>Repairs and Upgrades</h2>
 				<p>Whether you need minor repairs or major upgrades, we have you covered. We use only genuine Range Rover parts and our skilled technicians ensure that all work is done to the highest standard.</p>
 			</div>
 			<div class="service">
-				<img src="service3.jpg">
+				<i class="fas fa-paint-brush"></i>
 				<h2>Customization</h2>
 				<p>We offer a range of customization options to make your Range Rover truly your own. From unique paint finishes to personalized interiors, our team of designers and technicians will work with you to create the perfect look.</p>
 			</div>
 			<div class="service">
-				<img src="service4.jpg">
+				<i class="fas fa-car"></i>
 				<h2>24/7 Roadside Assistance</h2>
 				<p>We understand that unexpected breakdowns can happen anytime, anywhere. That's why we offer 24/7 roadside assistance to ensure that you are never stranded. Our team of experts will come to your location and get you back on the road as quickly as possible.</p>
 			</div>
